--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,83 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
+:root,
+html,
+body,
+.bg-image {
+  min-height: 100vh;
+}
+
+.bg-gradient {
+  background: linear-gradient(135deg, #dde7f1, #dcceff);
+  position: relative;
+}
+
+.gr-bg {
+  background: linear-gradient(to bottom, #4a04fa, #67a3df);
+}
+
+.bg-dots {
+  background: radial-gradient(
+      circle at top,
+      rgba(186, 159, 253, 0.2),
+      transparent
+    );
+  background-size: cover;
+  position: relative;
+  border-radius: 50%;
+}
+
+.dot {
+  position: absolute;
+  width: 2px;
+  height: 2px;
+  background-color: black;
+  border-radius: 50%;
+}
+
+.bg-image {
+  background-image: url("/public/patternpad-2025-02-12-14-03-07.svg");
+  background-size: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 1;
+  pointer-events: none;
+}
+
+/* Adding the grid effect */
+.bg-gradient::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(
+    circle,
+    rgba(255, 255, 255, 0.2) 1px,
+    transparent 1px
+  );
+  background-size: 60px 60px;
+  opacity: 0.3;
+  pointer-events: none;
+}
+
+/* Adding glowing dots */
+.bg-gradient::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(
+    circle,
+    rgba(255, 255, 255, 0.5) 3px,
+    transparent 4px
+  );
+  background-size: 100px 100px;
+  opacity: 0.5;
+  pointer-events: none;
 }
 
 @layer base {
